post-create modal inputs added

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,8 @@
-<app-post-create></app-post-create>
+<div class="container-fluid">
+  <div class="container border-0 rounded-pill text-center mt-3 p-3 w-75"
+    style='background-image: url("https://t4.ftcdn.net/jpg/01/77/73/67/360_F_177736729_q0OyOWR0oV7d4GeUHXmwAddadTbCpL4V.jpg");'>
+    <h3 class="fs-1 fw-bold">Cloud Storage for Posts
+    </h3>
+  </div>
+  <app-post-create></app-post-create>
+</div>
