--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <header>
   <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Navbar</a>
+      <a class="navbar-brand" href="#">Posts Cloud</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -11,16 +11,29 @@
           <li class="nav-item">
             <a class="nav-link" aria-current="page" routerLink="/">Home</a>
           </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+              aria-expanded="false">
+              Posts
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">Create</a>
+              </li>
+              <li><a class="dropdown-item" href="#search">Find Post</a></li>
+            </ul>
+          </li>
           <li class="nav-item">
             <a class="nav-link" routerLink="/about">About</a>
           </li>
         </ul>
-        <form class="d-flex">
+        <div class="d-flex">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-light" type="submit">Search</button>
-        </form>
+          <button id="search" class="btn btn-outline-light" routerLink="/" type="submit">Search</button>
+        </div>
       </div>
     </div>
   </nav>
 </header>
+
+
 <router-outlet></router-outlet>
