--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,8 +1,18 @@
 <div class="container-fluid">
-  <div class="container border-0 rounded-pill text-center mt-3 p-3 w-75"
-    style='background-image: url("https://t4.ftcdn.net/jpg/01/77/73/67/360_F_177736729_q0OyOWR0oV7d4GeUHXmwAddadTbCpL4V.jpg");'>
-    <h3 class="fs-1 fw-bold">Cloud Storage for Posts
-    </h3>
+  <div class="container-fluid">
+    <div class="card bg-dark text-white mt-3">
+      <div
+        style='background-image:url("https://t4.ftcdn.net/jpg/01/77/73/67/360_F_177736729_q0OyOWR0oV7d4GeUHXmwAddadTbCpL4V.jpg"); height: 200px;'
+        class="card-img" alt="..."></div>
+      <div class="card-img-overlay text-center" style="color: black;">
+        <h5 class="card-title fs-2 fw-normal">Welcome to AGS Cloud Server</h5>
+        <br>
+        <p class="card-text fw-light">Cloud Storage for Posts from AGS Market</p>
+        <p class="card-text position-absolute bottom-0 start-50 translate-middle" style="color: darkgray;">Created
+          with
+          Angular 11</p>
+      </div>
+    </div>
+
   </div>
-  <app-post-create></app-post-create>
 </div>
