post card designed

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,17 +2,24 @@
   <div class="container-fluid">
     <div class="card bg-dark text-white mt-3">
       <div
-        style='background-image:url("https://t4.ftcdn.net/jpg/01/77/73/67/360_F_177736729_q0OyOWR0oV7d4GeUHXmwAddadTbCpL4V.jpg"); height: 200px;'
-        class="card-img" alt="..."></div>
+        style='background-image:url("https://t4.ftcdn.net/jpg/01/77/73/67/360_F_177736729_q0OyOWR0oV7d4GeUHXmwAddadTbCpL4V.jpg"); height: 220px;'
+        class="card-img"></div>
       <div class="card-img-overlay text-center" style="color: black;">
         <h5 class="card-title fs-2 fw-normal">Welcome to AGS Cloud Server</h5>
-        <br>
+        <hr style="max-width: 50%;margin-left: 25%;">
         <p class="card-text fw-light">Cloud Storage for Posts from AGS Market</p>
+
         <p class="card-text position-absolute bottom-0 start-50 translate-middle" style="color: darkgray;">Created
           with
           Angular 11</p>
       </div>
     </div>
-
   </div>
+  <hr>
+  <div class="container-fluid mt-3">
+    <div class="card-group">
+      <app-post></app-post>
+    </div>
+  </div>
+
 </div>
