--- a/src/app/dashboard/post/post.component.html
+++ b/src/app/dashboard/post/post.component.html
@@ -1,6 +1,6 @@
 <div class="card" style="max-width:300px;">
-  <div style='background-image:url("https://source.unsplash.com/1000x500/?nature,water"); height: 200px;'
-    class="card-img"></div>
+  <div style='background-image:url("https://source.unsplash.com/500x500/?nature"); height: 200px;' class="card-img">
+  </div>
   <div class="card-body">
     <h5 class="card-title">Card title</h5>
     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content.
