post component added

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -17,8 +17,6 @@
   </div>
   <hr>
   <div class="container-fluid mt-3">
-    <div class="card-group">
-      <app-post></app-post>
-    </div>
+    <app-post-container [postsArr]="postsArr"></app-post-container>
   </div>
 </div>
