--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -44,21 +44,18 @@
       </div>
       <div class="modal-body">
         <div class="input-group mb-3">
-          <input type="file" class="form-control" id="inputGroupFile02">
+          <input type="file" #fileInp class="form-control" id="inputGroupFile02">
         </div>
         <div class="input-group">
           <span class="input-group-text">Description</span>
-          <textarea class="form-control" aria-label="With textarea"></textarea>
+          <textarea class="form-control" #desInp aria-label="With textarea"></textarea>
         </div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" (click)="addPost()" class="btn btn-primary">Save changes</button>
+        <button type="button" (click)="addPost(desInp, fileInp)" class="btn btn-primary">Save changes</button>
       </div>
     </div>
   </div>
 </div>
 <router-outlet></router-outlet>
-<footer class="mt-4">
-
-</footer>
