create posts working

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,4 @@
+<app-nav [postsArr]="postsArr" [today]="updated()"></app-nav>
 <div class="container-fluid">
   <div class="container-fluid">
     <div class="card bg-dark text-white mt-3">
