--- a/src/app/dashboard/post-container/specific-post/specific-post.component.html
+++ b/src/app/dashboard/post-container/specific-post/specific-post.component.html
@@ -1,8 +1,8 @@
 <div class="card me-2 ms-2" style="max-width:300px;min-width: 300px;height: 400px;">
   <div style='background-image:url("{{post.imgPath[0]}}"); height: 200px;' class="card-img">
   </div>
-  <div class="card-body">
-    <p class="card-text">{{post.des.slice(201)==""?post.des:post.des.slice(0,200)+"..."}}</p>
+  <div class="card-body" style="height: 200px;">
+    <p class="card-text">{{post.des.slice(150)==""?post.des:post.des.slice(0,151)+" ..."}}</p>
   </div>
   <div class="card-footer">
     <small class="text-muted">Last updated {{post.updated}}</small>
