--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -38,23 +38,34 @@
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog  modal-dialog-centered modal-dialog-scrollable">
     <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <div class="input-group mb-3">
-          <input type="file" #fileInp class="form-control" id="inputGroupFile02">
+      <form class="needs-validation" (submit)="addPost(postForm)" #postForm="ngForm" novalidate>
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
-        <div class="input-group">
-          <span class="input-group-text">Description</span>
-          <textarea class="form-control" #desInp aria-label="With textarea"></textarea>
+        <div class="modal-body">
+          <div class="input-group mb-3">
+            <input type="file" name="fileInp" class="form-control" id="inputGroupFile02" ngModel required>
+          </div>
+          <div class="input-group">
+            <span class="input-group-text">Description</span>
+            <textarea id="des" type="text" class="form-control" name="desInp" ngModel></textarea>
+          </div>
+          <div *ngIf="postCreationStatus=='success'" class="alert alert-success fade show mt-1 text-center"
+            role="alert">
+            <strong>Post Created Successfully</strong>
+          </div>
+          <div *ngIf="postCreationStatus=='empty input'" class="alert alert-danger fade show mt-1 text-center"
+            role="alert">
+            <strong>Please Provide a Description</strong>
+          </div>
         </div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" (click)="addPost(desInp,fileInp)" class="btn btn-primary">Save changes</button>
-      </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"
+            (click)="postCreationStatus='uninit'">Close</button>
+          <button type="submit" class="btn btn-primary">Save changes</button>
+        </div>
+      </form>
     </div>
   </div>
 </div>
