--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<app-nav [postsArr]="postsArr" [today]="updated()"></app-nav>
+<app-nav></app-nav>
 <div class="container-fluid">
   <div class="container-fluid">
     <div class="card bg-dark text-white mt-3">
@@ -18,6 +18,6 @@
   </div>
   <hr>
   <div class="container-fluid mt-3">
-    <app-post-container [postsArr]="postsArr"></app-post-container>
+    <app-post-container></app-post-container>
   </div>
 </div>
