--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -17,7 +17,8 @@
               Posts
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">Create</a>
+              <li><a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">Upload
+                  Post</a>
               </li>
               <li><a class="dropdown-item" href="#search">Find Post</a></li>
             </ul>
@@ -40,12 +41,45 @@
     <div class="modal-content">
       <form class="needs-validation" (submit)="addPost(postForm)" #postForm="ngForm" novalidate>
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+          <h5 class="modal-title" id="exampleModalLabel">Upload Post</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          <div class="input-group mb-3">
-            <input type="file" name="fileInp" class="form-control" id="inputGroupFile02" ngModel required>
+          <div class="accordion accordion-flush" id="accordionFlushExample">
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="flush-headingOne">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                  Upload Full Image to Cloud
+                </button>
+              </h2>
+              <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
+                data-bs-parent="#accordionFlushExample">
+                <div class="accordion-body">
+                  <div class="input-group mb-3">
+                    <input type="file" name="fileInp" class="form-control" id="inputGroupFile02" ngModel required>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="flush-headingTwo">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                  Upload Only Link of the Image to Cloud
+                </button>
+              </h2>
+              <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
+                data-bs-parent="#accordionFlushExample">
+                <div class="accordion-body">
+                  <div class="input-group mb-3">
+                    <span class="input-group-text" id="inputGroup-sizing-default">Image Link</span>
+                    <input id="link" name="linkInp" ngModel required type="text" class="form-control"
+                      aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="input-group">
             <span class="input-group-text">Description</span>
@@ -57,13 +91,13 @@
           </div>
           <div *ngIf="postCreationStatus=='empty input'" class="alert alert-danger fade show mt-1 text-center"
             role="alert">
-            <strong>Please Provide a Description</strong>
+            <strong>Please fill up the necessary Input</strong>
           </div>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"
             (click)="postCreationStatus='uninit'">Close</button>
-          <button type="submit" class="btn btn-primary">Save changes</button>
+          <button type="submit" class="btn btn-primary">Upload</button>
         </div>
       </form>
     </div>
