--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <app-nav></app-nav>
-<div class="container-fluid">
+<div>
   <div class="container-fluid">
-    <div class="card bg-dark text-white mt-3">
+    <div class="card bg-dark text-white mt-3" style="border: none !important">
       <div
         style='background-image:url("https://t4.ftcdn.net/jpg/01/77/73/67/360_F_177736729_q0OyOWR0oV7d4GeUHXmwAddadTbCpL4V.jpg"); height: 220px;'
         class="card-img"></div>
