--- a/src/app/dashboard/post-container/specific-post/specific-post.component.html
+++ b/src/app/dashboard/post-container/specific-post/specific-post.component.html
@@ -5,6 +5,6 @@
     <p class="card-text">{{post.des.slice(150)==""?post.des:post.des.slice(0,151)+" ..."}}</p>
   </div>
   <div class="card-footer">
-    <small class="text-muted">Last updated {{post.updated}}</small>
+    <small class="text-muted">Last updated on {{post.updated}}</small>
   </div>
 </div>
