multiple file upload

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -59,7 +59,7 @@
                 <div class="accordion-body">
                   <div class="input-group mb-3">
                     <input type="file" name="fileInp" class="form-control" id="inputGroupFile02"
-                      (change)="selected($event)" ngModel required multiple>
+                      accept="image/png, image/gif, image/jpeg" (change)="selected($event)" ngModel required multiple>
                   </div>
                 </div>
               </div>
