post delete route added

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,3 @@
-<app-nav></app-nav>
 <div>
   <div class="container-fluid">
     <div class="card bg-dark text-white mt-3" style="border: none !important">
@@ -6,7 +5,7 @@
         style='background-image:url("https://t4.ftcdn.net/jpg/01/77/73/67/360_F_177736729_q0OyOWR0oV7d4GeUHXmwAddadTbCpL4V.jpg"); height: 220px;'
         class="card-img"></div>
       <div class="card-img-overlay text-center" style="color: black;">
-        <h5 class="card-title fs-2 fw-normal">AGS Cloud Server</h5>
+        <h5 class="card-title fs-2 fw-normal">AGS Market</h5>
         <hr style="max-width: 50%;margin-left: 25%;">
         <p class="card-text fw-light">Cloud Storage for Posts from AGS Market</p>
 
