--- a/src/app/dashboard/post-container/specific-post/specific-post.component.html
+++ b/src/app/dashboard/post-container/specific-post/specific-post.component.html
@@ -1,12 +1,13 @@
 <div class="card me-2 ms-2" style="max-width:300px;min-width: 300px;height: 400px;">
-  <div style='background-image:url("{{post.imgPath[0]}}"); height: 200px;' class="card-img">
+  <div style='height: 200px;' class="card-img">
+    <img src="{{post.imgPath[0]}}" alt="{{post.imgPath[0]}}">
   </div>
   <div class="card-body" style="height: 200px;">
     <p class="card-text">{{post.des.slice(150)==""?post.des:post.des.slice(0,151)+" ..."}}</p>
   </div>
   <div class="card-footer">
     <small class="text-muted">Last updated on {{post.updated}}</small>
-    <button class="btn btn-sm btn-outline-danger float-end" (click)="deleteThisPost(post.id)"><svg
+    <button class="btn btn-sm btn-outline-danger float-end" data-bs-toggle="modal" data-bs-target="#exampleModal2"><svg
         xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash"
         viewBox="0 0 16 16">
         <path
@@ -15,5 +16,24 @@
           d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z" />
       </svg>
     </button>
+  </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Delete Post</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body text-center">
+        <p class="fw-normal">Are you sure you want to delete this post ?</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Abort</button>
+        <button type="button" class="btn btn-danger" (click)="deleteThisPost(post.id)">Delete</button>
+      </div>
+    </div>
   </div>
 </div>
