--- a/src/app/dashboard/post-container/specific-post/specific-post.component.html
+++ b/src/app/dashboard/post-container/specific-post/specific-post.component.html
@@ -7,8 +7,9 @@
   </div>
   <div class="card-footer">
     <small class="text-muted">Last updated on {{post.updated}}</small>
-    <button class="btn btn-sm btn-outline-danger float-end" data-bs-toggle="modal" data-bs-target="#exampleModal2"><svg
-        xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash"
+    <!-- data-bs-toggle="modal" data-bs-target="#exampleModal2" -->
+    <button class="btn btn-sm btn-outline-danger float-end" (click)="deleteThisPost({id:post.id,imgPath:post.imgPath})">
+      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash"
         viewBox="0 0 16 16">
         <path
           d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z" />
@@ -32,7 +33,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Abort</button>
-        <button type="button" class="btn btn-danger" (click)="deleteThisPost(post.id)">Delete</button>
+        <button type="button" class="btn btn-danger">Delete</button>
       </div>
     </div>
   </div>
