post deletion improved

--- a/src/app/dashboard/post-container/specific-post/specific-post.component.html
+++ b/src/app/dashboard/post-container/specific-post/specific-post.component.html
@@ -8,7 +8,7 @@
   <div class="card-footer">
     <small class="text-muted">Last updated on {{post.updated}}</small>
     <!-- data-bs-toggle="modal" data-bs-target="#exampleModal2" -->
-    <button class="btn btn-sm btn-outline-danger float-end" (click)="deleteThisPost({id:post.id,imgPath:post.imgPath})">
+    <button class="btn btn-sm btn-outline-danger float-end" (click)="deleteThisPost(post.id)">
       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash"
         viewBox="0 0 16 16">
         <path
