upload inputs extra conditions added

--- a/src/app/dashboard/post-container/specific-post/specific-post.component.html
+++ b/src/app/dashboard/post-container/specific-post/specific-post.component.html
@@ -12,7 +12,7 @@
     <div class="card-body text-center">
 
       <h5>{{post.title[21]?post.title.slice(0,20)+"...":post.title}}</h5>
-      <p class="small text-muted text-uppercase mb-2">Shirts</p>
+      <p class="small text-muted text-uppercase mb-2">{{post.category}}</p>
       <p>{{post.des.slice(0,30)+"..."}}</p>
       <hr>
       <h6 class="mb-3">
