--- a/src/app/dashboard/post-container/specific-post/specific-post.component.html
+++ b/src/app/dashboard/post-container/specific-post/specific-post.component.html
@@ -1,12 +1,23 @@
 <div style="width:20em; height: 30em;min-height: 30em; margin: 10px">
   <!-- Card -->
   <div class="card" style="border-radius: 10px;">
-    <div class="view overlay" style="height: 15em;overflow: hidden;">
-      <img class="img-fluid w-100" style="height: 15em; border-radius: 11px;" src="{{post.imgPath[0]}}" alt="Sample">
+    <!-- <div class="bg-image hover-overlay ripple shadow-1-strong rounded" data-mdb-ripple-color="light"
+      style="height: 15em;overflow: hidden;">
+      <img class="img-fluid w-100" style="height: 15em; border-radius: 11px;" [src]="post.imgPath[0]"
+        alt='https://source.unsplash.com/1600x900/?nature,water' loading="eager|lazy">
       <a href="#!">
-        <div class="mask rgba-white-slight"></div>
+        <div class="mask"></div>
       </a>
+    </div> -->
+
+    <div class="hovereffect" style="height: 15em;overflow: hidden;">
+      <img style="height: 15em; border-radius: 11px;" class="img-responsive w-100" [src]="post.imgPath[0]" alt="">
+      <div class="overlay">
+        <h2>{{post.title[21]?post.title.slice(0,20)+"...":post.title}}</h2>
+        <a class="info" href="#">Explore</a>
+      </div>
     </div>
+
     <div class="card-body text-center">
       <h5>{{post.title[21]?post.title.slice(0,20)+"...":post.title}}</h5>
       <p class="small text-muted text-uppercase mb-2">{{post.category}}</p>
